[gd_scene load_steps=19 format=3 uid="uid://wcw48a7wirak"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_2r0h1"]
[ext_resource type="Script" path="res://Scripts/Fireworks/firework_launcher.gd" id="2_la56c"]
[ext_resource type="Shader" path="res://Shaders/horizontal_blur.gdshader" id="3_mt32h"]
[ext_resource type="Shader" path="res://Shaders/vertical_blur.gdshader" id="4_h6am2"]
[ext_resource type="Shader" path="res://Shaders/add.gdshader" id="5_hntl1"]
[ext_resource type="Texture2D" uid="uid://bg5nuvqiic2mq" path="res://Assets/Sprites/_19.png" id="6_sh6ym"]
[ext_resource type="Theme" uid="uid://bigt2ohojlacf" path="res://Themes/theme.tres" id="7_b3ngl"]

[sub_resource type="ViewportTexture" id="ViewportTexture_b1a5d"]
viewport_path = NodePath("FireworkLauncher")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r5viv"]
resource_local_to_scene = true
shader = ExtResource("3_mt32h")
shader_parameter/BLUR_RANGE = null
shader_parameter/INTENSITY_MUL = null
shader_parameter/WINDOW_W = null
shader_parameter/unblurred_texture = SubResource("ViewportTexture_b1a5d")

[sub_resource type="ViewportTexture" id="ViewportTexture_wpsyx"]
viewport_path = NodePath("HorizontalBlurred")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dysrb"]
resource_local_to_scene = true
shader = ExtResource("4_h6am2")
shader_parameter/BLUR_RANGE = null
shader_parameter/INTENSITY_MUL = null
shader_parameter/WINDOW_H = null
shader_parameter/horizontal_blurred_texture = SubResource("ViewportTexture_wpsyx")

[sub_resource type="ViewportTexture" id="ViewportTexture_n33ke"]
viewport_path = NodePath("FireworkLauncher")

[sub_resource type="ViewportTexture" id="ViewportTexture_tftqy"]
viewport_path = NodePath("VerticalBlurred")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fueno"]
resource_local_to_scene = true
shader = ExtResource("5_hntl1")
shader_parameter/vertical_blurred_texture = SubResource("ViewportTexture_tftqy")
shader_parameter/unblurred_texture = SubResource("ViewportTexture_n33ke")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kagxu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5o6s"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvcyo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0ggl"]
bg_color = Color(1, 1, 1, 0.227451)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Main" type="Node2D"]
script = ExtResource("1_2r0h1")

[node name="FireworkLauncher" type="SubViewport" parent="."]
size = Vector2i(600, 600)

[node name="Bkg" type="ColorRect" parent="FireworkLauncher"]
offset_right = 600.0
offset_bottom = 600.0
color = Color(0.0980392, 0.0980392, 0.156863, 1)

[node name="FireworkLauncher" type="Node2D" parent="FireworkLauncher"]
script = ExtResource("2_la56c")

[node name="Camera2D" type="Camera2D" parent="FireworkLauncher"]
anchor_mode = 0

[node name="HorizontalBlurred" type="SubViewport" parent="."]
size = Vector2i(600, 600)

[node name="HorizontalBlur" type="ColorRect" parent="HorizontalBlurred"]
material = SubResource("ShaderMaterial_r5viv")
offset_right = 600.0
offset_bottom = 600.0

[node name="Camera2D" type="Camera2D" parent="HorizontalBlurred"]
anchor_mode = 0

[node name="VerticalBlurred" type="SubViewport" parent="."]
size = Vector2i(600, 600)

[node name="VerticalBlur" type="ColorRect" parent="VerticalBlurred"]
material = SubResource("ShaderMaterial_dysrb")
offset_right = 600.0
offset_bottom = 600.0

[node name="Camera2D" type="Camera2D" parent="VerticalBlurred"]
anchor_mode = 0

[node name="Add" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fueno")
offset_right = 600.0
offset_bottom = 600.0

[node name="Characters" type="Sprite2D" parent="."]
position = Vector2(300, 300)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_sh6ym")

[node name="BkgButton" type="Button" parent="."]
offset_right = 600.0
offset_bottom = 600.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kagxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_v5o6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pvcyo")

[node name="ShowUIButton" type="Button" parent="."]
offset_left = 520.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 41.0
theme = ExtResource("7_b3ngl")
text = "Options
"

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 370.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 170.0
theme = ExtResource("7_b3ngl")

[node name="Bkg" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x0ggl")

[node name="ShowCharacters" type="CheckBox" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 101.0
offset_bottom = 41.0
button_pressed = true
text = "Show characters
"

[node name="AutoLaunchFireworks" type="CheckBox" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 209.0
offset_bottom = 71.0
button_pressed = true
text = "Auto launch fireworks"

[node name="ClickToLaunchLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 80.0
offset_right = 144.0
offset_bottom = 106.0
text = "Click to launch
"

[node name="ClickToLaunch" type="OptionButton" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 109.0
offset_right = 123.0
offset_bottom = 140.0
item_count = 5
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "White"
popup/item_1/id = 1
popup/item_2/text = "Yellow"
popup/item_2/id = 2
popup/item_3/text = "Blue"
popup/item_3/id = 3
popup/item_4/text = "Green"
popup/item_4/id = 4

[node name="HideUIButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = -50.0
offset_right = -6.0
offset_bottom = 31.0
text = "Hide"

[connection signal="pressed" from="BkgButton" to="." method="_on_bkg_button_pressed"]
[connection signal="pressed" from="ShowUIButton" to="." method="_on_show_ui_button_pressed"]
[connection signal="pressed" from="UI/ShowCharacters" to="." method="_on_show_characters_pressed"]
[connection signal="pressed" from="UI/HideUIButton" to="." method="_on_hide_ui_button_pressed"]
